--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row text-center">
   			<li><a href="http://oregonstate.edu/" target="_blank"><img src="img/OSU-logo.png" style="max-width:10%;" ></a></li>
             <li><img src="img/oregon.jpg" style="max-width:20%;" ></li>
-            <li><a href="http://water.oregonstate.edu/" target="_blank"><img src="img/IWW-icon.png" style="max-width:8%;" ></a></li>
+            <li><a href="http://water.oregonstate.edu/" target="_blank"><img src="img/IWW-Icon.png" style="max-width:8%;" ></a></li>
 		</div>
         
         <div class="row">
