--- a/groundwater_index.html
+++ b/groundwater_index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta property="og:title" content="Oregon Groundwater" />
+    <meta property="og:title" content="Oregon Water Atlas: Groundwater" />
     <meta property="og:url" content="http://rawgit.com/cartobaldrica/water_atlas/master/groundwater_index.html" />
     <meta property="og:description" content="Explore Oregon's groundwater." />
     
@@ -36,7 +36,7 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="http://rawgit.com/cartobaldrica/water_atlas/master/index.html">Home</a>
+            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
             <a class="navbar-brand" data-toggle="modal" data-target="#share-modal" style="cursor:pointer;">Share</a>
             <a class="navbar-brand" data-toggle="modal" data-target="#info-modal" style="cursor:pointer;">About</a>
             <a class="navbar-brand" href="#">Groundwater</a>
