--- a/flood_index.html
+++ b/flood_index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta property="og:title" content="Oregon Flooding" />
+    <meta property="og:title" content="Oregon Water Atlas: Flooding" />
     <meta property="og:url" content="http://rawgit.com/cartobaldrica/water_atlas/master/flood_index.html" />
-    <meta property="og:description" content="Major historical Oregon floods and explorations of flood vulnerability and risk." />
+    <meta property="og:description" content="Explore Oregon's historical floods and current flood risk." />
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
@@ -40,7 +40,7 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="http://rawgit.com/cartobaldrica/water_atlas/master/index.html">Home</a>
+            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
             <a class="navbar-brand" data-toggle="modal" data-target="#share-modal" style="cursor:pointer;">Share</a>
             <a class="navbar-brand" data-toggle="modal" data-target="#info-modal" style="cursor:pointer;">About</a>
             <a class="navbar-brand" href="#">Flooding</a>
