--- a/water_use_index.html
+++ b/water_use_index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta property="og:title" content="Oregon Drinking Water" />
+    <meta property="og:title" content="Oregon Water Atlas: Water Use" />
     <meta property="og:url" content="http://rawgit.com/cartobaldrica/water_atlas/master/water_use_index.html" />
-    <meta property="og:description" content="Explore Oregon's drinking water." />
+    <meta property="og:description" content="Explore Oregon's water use." />
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
@@ -36,7 +36,7 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="http://rawgit.com/cartobaldrica/water_atlas/master/index.html">Home</a>
+            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
             <a class="navbar-brand" data-toggle="modal" data-target="#share-modal" style="cursor:pointer;">Share</a>
             <a class="navbar-brand" data-toggle="modal" data-target="#info-modal" style="cursor:pointer;">About</a>
             <a class="navbar-brand" href="#">Water Use</a>
