--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Oregon Water Atlas</h1>
-                <a class="about" data-toggle="modal" data-target="#info-modal"><p style="text-align:center">About</p></a>
+                <a class="about" data-toggle="modal" data-target="#info-modal"><p style="text-align:center; margin-top:20px;">About</p></a>
                 <hr>
                 <h2 style ="margin-bottom: 0px;">Chapters</h2>
             </div>
@@ -62,7 +62,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h2 class="modal-title">About</h2>
+                    <p class="modal-title" style="font-size:30px;">About</p>
                 </div>
                 <div class="modal-body">
                     <p>The Oregon Water Atlas was created for the Institute for Water and Watersheds at Oregon State University, and by Gareth Baldrica-Franklin.</p>
@@ -83,13 +83,12 @@
                 <a  href="precipitation.html" target="_blank">
                     <img class="img-responsive" src="img/precip_home.png" alt="">
                 </a>
-                <h3>
-                    <a  href="precipitation.html" target="_blank">Precipitation</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">rain, weather, annual, monthly</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                	<p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">Oregon is known for having lots of rain. The reality is far more complicated. While some areas in the Oregon Coast Range are among the rainiest in the U.S, most of Oregon is subject to extremely dry summers. Much of Eastern Oregon is dry throughout the year.</p>
+                	<h4>
+                    	<a  href="precipitation.html" target="_blank">Precipitation</a>
+                	</h4>
+                	<p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">rain, weather, annual, monthly</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item col-centered">
@@ -97,13 +96,12 @@
                 <a  href="groundwater_index.html" target="_blank">
                     <img class="img-responsive" src="img/ground_home.png" alt="">
                 </a>
-                <h3>
-                    <a  href="groundwater_index.html" target="_blank">Groundwater</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">aquifers, recharge, irrigation, use, conservation</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                <p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">Groundwater is the most difficult aspect of Oregon's water to measure. It primarily exists in the spaces between soil and rock particles underground. Groundwater is particularly important in Eastern and Central Oregon, where surface water supplies are limited. </p>
+                <h4>
+                    <a  href="groundwater_index.html" target="_blank">Groundwater</a>
+                </h4>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">aquifers, recharge, irrigation, use, conservation</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item col-centered">
@@ -111,13 +109,12 @@
                 	<a  href="surface_index.html" target="_blank">
                     	<img class="img-responsive" src="img/surface_home.png" alt="">
                 	</a>
-                	<h3>
-                    	<a  href="surface_index.html" target="_blank">Surface Water</a>
-               		</h3>
-               		<p style="font-weight:bold; padding-right:20px; margin-top:-5px;">rivers, lakes, watersheds, wetlands, pollution</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                	    <p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">Surface water weaves across the Oregon landscape, defining distinct ecoregions and watersheds. Surface freshwater includes rivers, lakes, and wetlands. Surface water is an important environmental resource for natural systems and human use.</p>
+                	<h4>
+                    	<a  href="surface_index.html" target="_blank">Surface Water</a>
+               		</h4>
+               		<p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">rivers, lakes, watersheds, wetlands, pollution</p>
                 </div>
             </div>
         </div>
@@ -130,13 +127,12 @@
                 <a href="flood_index.html" target="_blank">
                     <img class="img-responsive" src="img/flood_home.png" alt="">
                 </a>
-                <h3>
-                    <a  href="flood_index.html" target="_blank">Flooding</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">1861, Vanport, 1964, 1996, flood risj</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                <p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">Approximately 25% of Oregonians live in floodplains. Despite the increased management and regulation of rivers, flooding remains a risk throughout most of the state, particularly west of the Cascades. Understanding the impacts of historic floods and surveying at-risk areas can aid hazard planning and response.</p>
+                <h4>
+                    <a  href="flood_index.html" target="_blank">Flooding</a>
+                </h4>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">1861, Vanport, 1964, 1996, flood risk</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item nopadding">
@@ -144,13 +140,12 @@
                 <a  href="infrastructure_index.html" target="_blank">
                     <img class="img-responsive" src="img/infra_home.png" alt="">
                 </a>
-                <h3>
-                    <a  href="infrastructure_index.html" target="_blank">Infrastructure</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">dams, hazards, hydroelectricity, dam removal, bridges</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                <p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">Water is capable of many extraordinary things. Throughout history, humans have attempted to control or utilize the power of water. In Oregon, water presents both opportunities and obstacles, and we have used infrastructure to exploit both.</p>
+                 <h4>
+                    <a  href="infrastructure_index.html" target="_blank">Infrastructure</a>
+                </h4>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">dams, hazards, hydroelectricity, dam removal, bridges</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
@@ -158,13 +153,12 @@
                 <a href="water_use_index.html" target="_blank">
                     <img class="img-responsive" src="img/use_home.png" alt="">
                 </a>
-                <h3>
-                   <a  href="water_use_index.html" target="_blank"> Water Use</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">total use, water rights, use categories</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                <p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">The scope of Oregon's water use is broad. From the flooded fields of cranberry farms, to the running sinks of a local school, water is used for anything and everything. Water use can be examined by looking at the amount of water extracted, or the number of different extractors.</p>
+                 <h4>
+                   <a  href="water_use_index.html" target="_blank"> Water Use</a>
+                </h4>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">total use, water rights, use categories</p>
                 </div>
             </div>
         </div>
@@ -176,13 +170,12 @@
                 <a  href="drinking_index.html" target="_blank">
                     <img class="img-responsive" src="img/drinking_home.png" alt="">
                 </a>
-                <h3>
-                    <a  href="drinking_index.html" target="_blank">Drinking Water</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">surface, ground, bottled, contaminants</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                <p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">Over 80% of Oregon resident's get drinking water from public water systems. Many of these systems rely on some combination of ground and surface water sources. From the pristine Bull Run watershed, to the groundwater wells of Eastern Oregon, maintaining quality drinking water requires continual testing and communication.</p>
+                   <h4>
+                    <a  href="drinking_index.html" target="_blank">Drinking Water</a>
+                </h4>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">surface, ground, bottled, contaminants</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
@@ -190,13 +183,12 @@
                 <a  href="water_use_index.html" target="_blank">
                     <img class="img-responsive" src="img/precip_home.png" alt="">
                 </a>
-                <h3>
-                    <a  href="water_use_index.html" target="_blank">Conflict</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">Umatilla, Klamath</p>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
-                <p style="text-align:justify; padding-right:30px;  padding-left:5px; font-size:12px;">Most Oregon waters are home to multiple species of fish. Fish play a major role for regional indigenous groups, and are an important food source. Urbanization and river engineering have dramatically altered fish habitats and migration paths, changing the dynamics of Oregon fish populations.</p>
+                <h4>
+                    <a  href="water_use_index.html" target="_blank">Conflict</a>
+                </h4>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">Umatilla, Klamath</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
@@ -204,13 +196,11 @@
                 <a  href="fish_index.html" target="_blank">
                     <img class="img-responsive" src="img/fish_home.png" alt="">
                 </a>
-                <h3>
-                    <a  href="fish_index.html" target="_blank">Fish</a>
-                </h3>
-                <p style="font-weight:bold; padding-right:20px; margin-top:-5px;">barriers, trout, salmon, lamprey, sturgeon, hatcheries</p>
                 </div>
-                <div class="col-sm-6 portfolio-item"> 
-                <p style="text-align:justify; padding-right:30px;  padding-left:5px;font-size:12px;">Most Oregon waters are home to multiple species of fish. Fish play a major role for regional indigenous groups, and are an important food source. Urbanization and river engineering have dramatically altered fish habitats and migration paths, changing the dynamics of Oregon fish populations.</p>
+                <h4>
+                    <a  href="fish_index.html" target="_blank">Fish</a>
+                </h4>
+                <p style="font-weight:bold; padding-right:20px; margin-top:-5px; font-size:16px;">barriers, trout, salmon, lamprey, sturgeon, hatcheries</p>
                 </div>
             </div>
         </div>
